@@ -1,0 +1,8 @@
+﻿
+Object methods!
+
+asTransactional
+	^@AjTalk.Transactions.TransactionalObject new: self with: (@AjTalk.Machine current transactionManager)
+! !
+
+
